2010-05-22 02:23-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/GormPreferences.gorm: Correct issue with pop up
	showing up as "Button."

2010-05-20 04:04-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormFilePrefsManager.m: Update version
	* GormInfo.plist: Update version
	* Palettes/2Controls/GormPopUpButtonEditor.m: Override
	method to prevent changes to appearance during editing.
	* Version: Change to 1.2.13 for SVN version of Gorm.

2010-05-18 21:55-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Version: 1.2.12

2010-05-18 21:50-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog
	* GormCore/GormNSWindow.m
	* GormCore/GormNSPanel.m: Update to use new designated initializer.

2010-05-18 20:50-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* ANNOUNCE
	* Documentation/announce.texi
	* Documentation/news.texi
	* Documentation/readme.texi
	* NEWS
	* README: Updating for release.

2010-05-18 20:38-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist: Update version number.

2010-05-18 20:31-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/Gorm.gorm: Remove delegate connection, since it's
	manually set in the Gorm NSApplication subclass to self.
	* GormCore/GormDocumentController.[hm]: Added new method 
	buildDocumentType:
	* GormCore/GormDocument.m: Added call to touch in setName: so that
	the document would be set as modified when the user alters
	the name of an object in the document.
	* GormCore/GormDocumentWindow.m: Remove methods preventing
	document window from assuming main/key status.
	* GormCore/GormPalettesManager.m: Remove methods allowing palette
	window to assume main/key status
	* Gorm.m: Added delegate methods to handle opening a document, if
	in a mode which requires a default document to be created.

2010-05-18 19:42-EDT Gregory John Casamento <greg.casamento@gmail.com>
